# entre_facturacao

entre_facturacao/: README.md  auto_repeat.py  boot.py  hooks.py  modules.txt  pyproject.toml
entre_facturacao/entre_facturacao/: utils.py
entre_facturacao/entre_facturacao/doctype/facturacao_settings/: facturacao_settings.py
entre_facturacao/entre_facturacao/doctype/user_signature/: user_signature.js  user_signature.json  user_signature.py
entre_facturacao/entre_facturacao/entre_facturacao/doctype/facturacao_settings/: facturacao_settings.json
entre_facturacao/entre_facturacao/entre_facturacao/doctype/user_signature/: user_signature.py
entre_facturacao/entre_facturacao/page/monitor_facturas/: monitor_facturas.js  monitor_facturas.json  monitor_facturas.py
entre_facturacao/entre_facturacao/report/extrato_da_factura/: extrato_da_factura.js  extrato_da_factura.json  extrato_da_factura.py
entre_facturacao/entre_facturacao/report/extrato_de_cliente/: extrato_de_cliente.js  extrato_de_cliente.json  extrato_de_cliente.py
entre_facturacao/entre_facturacao/workspace/entre_facturacao/: entre_facturacao.json
entre_facturacao/fixtures/: custom_field.json
entre_facturacao/public/js/: sales_invoice.js
