[project]
name = "entre_facturacao"
authors = [{ name = "Dércio Bobo", email = "derciobob@gmail.com" }]
description = "Custom pages, reports, and fields for ERPNext Sales Invoice"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
